Fix spacing blog index links

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -11,7 +11,7 @@ figcaption {
     font-weight: bold;
     position: relative;
     font-size: 1em;
-    margin-top: 5em;
+    margin-top: 2.5em;
     margin-bottom: 1em;
 }
 
